<resources>
    <string name="app_name">Tell Time</string>
    <string name="facebook_app_id">477806079217839</string>

    <string name="default_question">Question 1/10</string>
    <string name="string_format_question">Question %d/10</string>
    <string name="default_score">Score: 0</string>
    <string name="string_format_score">Score: %d</string>
    <string name="default_answer_1">10:00</string>
    <string name="default_answer_2">11:00</string>
    <string name="default_answer_3">12:00</string>
    <string name="question">What time is it?</string>
</resources>
