<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_score"
            android:textSize="@dimen/header_info_text_size"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_question"
            android:textSize="@dimen/header_info_text_size"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/analog_margin_top">

        <AnalogClock
            android:id="@+id/analog_clock"
            android:dial="@drawable/analog_clock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/postTit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PM"
            android:textSize="@dimen/answer"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/postTitle_margin_left"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/analog_margin_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/answer_margin"
            android:gravity="center"
            android:text="@string/question"
            android:textSize="@dimen/question"/>

        <Button
            android:id="@+id/answer_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_answer_1"
            android:textSize="@dimen/answer"/>
        <Button
            android:id="@+id/answer_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_answer_2"
            android:textSize="@dimen/answer"/>
        <Button
            android:id="@+id/answer_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_answer_3"
            android:textSize="@dimen/answer"/>

    </LinearLayout>

</LinearLayout>
